# Password-Analyzer

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
Prompts/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt
backend/: README.md  alembic.ini  entrypoint.sh  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: dcfeecf21552_create_password_analyses_table.py
backend/src/application/: __init__.py
backend/src/application/dto/: analyze_request.py  analyze_response.py  generate_request.py  generate_response.py
backend/src/application/use_cases/: __init__.py  analyze_password.py  generate_password.py
backend/src/domain/: __init__.py
backend/src/domain/entities/: password_analysis.py
backend/src/domain/policies/: strength_policy.py
backend/src/domain/repositories/: i_analysis_repository.py
backend/src/domain/services/: crack_time_estimator.py
backend/src/domain/value_objects/: character_pool.py  crack_time.py  entropy.py
backend/src/infrastructure/: __init__.py
backend/src/infrastructure/database/: connection.py  models.py
backend/src/infrastructure/repositories/: postgres_analysis_repository.py
backend/src/presentation/: __init__.py  dependencies.py
backend/src/presentation/api/v1/: __init__.py  analyze.py  generate.py  history.py
backend/src/presentation/schemas/: password_schemas.py
frontend/: app.js  index.html  style.css
